# encyc-tng

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .secrets.baseline  COPYRIGHT  Dockerfile  INSTALL.md  Makefile  README.md  docker-compose.yml  jest.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  webpack.config.js
conf/: encyctng-local-docker.cfg  encyctng.cfg  nginx.conf  supervisor.conf
doc/: migration.md
docs/: continuous-integration.md  docker.md  index.md  known-issues.md  migration.md
docs/front-end/: tooling.md
encyctng/: manage.py  setup.py
encyctng/editors/: models.py
encyctng/editors/migrations/: 0001_initial.py  0002_author_image.py  0003_author_slug.py
encyctng/encyclopedia/: admin.py  api.py  apps.py  blocks.py  citations.py  context_processors.py  databoxes.py  ddr.py  footnotes.py  middleware.py  migration.py  models.py  topics.py  urls.py  views.py  vocab.py  wagtail_hooks.py
encyctng/encyclopedia/migrations/: 0001_initial.py  0002_articlealbum_articlearticle_articlebook_articlecamp_and_more.py  0003_alter_article_body.py  0004_mediawikiwagtail.py  0005_alter_mediawikiwagtail_options.py  0006_article_title_sort.py  0007_alter_article_options_alter_article_description.py  0008_alter_article_footnotes.py  0009_article_signature_image_alter_article_body.py  0010_alter_article_body.py  0011_article_mw_url.py  0012_alter_article_options_alter_articlearticle_options_and_more.py  0013_article_related_articles_article_related_json.py  0014_articletopic_article_topics.py  0015_remove_articlenewspaper_peak_date_and_more.py
encyctng/encyclopedia/templates/encyclopedia/: about.html  article-toc.html  article.html  articles.html  author-detail.html  authors.html  base.html  contents.html  databox-album.html  databox-article.html  databox-book.html  databox-camp.html  databox-exhibition.html  databox-film.html  databox-magazine.html  databox-newspaper.html  databox-person.html  databox-play.html  databox-website.html  footer.html  header.html  history.html  source-document.html  source-image.html  source-video.html  terminology.html  timeline.html  topics.html
encyctng/encyclopedia/templates/encyclopedia/blocks/: documentblock.html  heading_block.html  imageblock.html  quote_block.html  videoblock.html
encyctng/encyclopedia/templates/encyclopedia/citations/: apa.html  bibtex.html  chicago.html  cse.html  mhra.html  mla.html
encyctng/encyclopedia/templates/encyclopedia/includes/: desktop-menu.html  desktop-nav.html  mobile-menu.html  search-form.html
encyctng/encyclopedia/templates/patterns/: base.html
encyctng/encyclopedia/templates/patterns/components/article_listing_item/: article_listing_item.html  article_listing_item.yaml
encyctng/encyclopedia/templates/patterns/components/author_listing_item/: article_listing_item.yaml  author_listing_item.html
encyctng/encyclopedia/templates/patterns/components/carousel/: carousel.html  carousel.yaml
encyctng/encyclopedia/templates/patterns/components/carousel_control/: carousel_control.html  carousel_control.yaml
encyctng/encyclopedia/templates/patterns/sprites/: sprites.html
encyctng/encyclopedia/templates/reports/: coming_soon_report_results.html
encyctng/encyclopedia/templates/reports/include/: _list_needs_editor.html
encyctng/encyclopedia/templatetags/: encyclopedia_tags.py
encyctng/encyctng/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
encyctng/home/: blocks.py  models.py
encyctng/home/migrations/: 0003_homepagecarouselindexpage.py  0004_homepagecarousel.py  0005_alter_homepagecarousel_images.py
encyctng/home/templates/home/: home_page.html
encyctng/info/: models.py  urls.py  views.py
encyctng/info/migrations/: 0001_initial.py
encyctng/sources/: admin.py  models.py
encyctng/sources/migrations/: 0001_initial.py
encyctng/static_src/javascript/: main.js
encyctng/static_src/javascript/components/: carousel.js  desktop-menu.js  mobile-menu.js  modal.js
encyctng/static_src/sass/: config.scss  main.scss
encyctng/static_src/sass/base/: _base.scss  _fonts.scss  _typography.scss
encyctng/static_src/sass/components/: _app.scss  _article-listing-item.scss  _author-listing-item.scss  _button.scss  _carousel-control.scss  _carousel.scss  _collection-header.scss  _desktop-menu.scss  _footnotes.scss  _full-width-image.scss  _grid.scss  _header.scss  _heading.scss  _hero-carousel.scss  _hero-split.scss  _hero.scss  _icon.scss  _in-page-nav.scss  _listing.scss  _modal.scss  _page.scss  _pagination.scss  _pill.scss  _quote-block.scss  _related-content-carousel.scss  _related-links.scss  _related-media.scss  _rich-text.scss  _search-form.scss  _search.scss  _sf.scss  _skip-link.scss  _sprites-preview-icons.scss  _tag.scss  _tags.scss  _topics.scss
encyctng/static_src/sass/components/navigation/: _desktop-menu.scss  _desktop-nav.scss  _footer.scss  _header.scss  _mobile-menu.scss
encyctng/static_src/sass/config/: _mixins.scss  _variables.scss
encyctng/styleguide/: README.md  apps.py
encyctng/styleguide/templates/patterns/: base.html
encyctng/styleguide/templates/patterns/components/tag/: tag.html  (+1 more)
encyctng/styleguide/templates/patterns/sprites/: sprites.html  sprites_preview.html
encyctng/templates/: base.html  footer.html
encyctng/templates/wagtailadmin/: 404.html  admin_base.html  base.html  home.html  login.html
encyctng/templates/wagtailadmin/userbar/: base.html
(+98 files in other folders)
