[project]
name = "encyc-tng"
description = "Densho Encyclopedia: The Next Generation"
authors = [
    {name = "Geoffrey Jost", email = "geoffrey.jost@densho.us"}
]
maintainers = [
    {name = "Geoffrey Jost", email="geoffrey.jost@densho.us"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Django", "encyclopedia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 6.3",
]

dynamic = ["version"]  # will read __version__ from encyctng/__init__.py
requires-python = ">=3.11"
dependencies = [
    'django-click',
    'Django>=5.1',
    'gunicorn',
    'httpx',
    'psycopg',
    'python-dateutil',
    'wagtail>=6.3,<6.4',
    'wagtailmedia',
    'walrus',
    'densho-wagtail-notes @ git+https://github.com/denshoproject/densho-wagtail-notes',
    'elastictools @ git+https://github.com/denshoproject/densho-elastictools',
    #'encyc-core @ git+https://github.com/denshoproject/encyc-core',
    'encyc-core @ git+file:///opt/encyc-core@wagtail',
]

[project.optional-dependencies]
testing = []

[project.urls]
Repository = "https://github.com/denshoproject/encyc-tng"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['encyctng']
