[project]
name = "encyc-tng"
description = "Densho Encyclopedia: The Next Generation"
authors = [
    {name = "Geoffrey Jost", email = "geoffrey.jost@densho.us"}
]
maintainers = [
    {name = "Geoffrey Jost", email="geoffrey.jost@densho.us"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Django", "encyclopedia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 6.3",
]

dynamic = ["version"]  # will read __version__ from encyctng/__init__.py
requires-python = ">=3.13"
dependencies = [
    'beautifulsoup4',
    'Django',
    'django-click',
    'django-extensions',
    'django-ninja',
    'django-pattern-library',
    'gunicorn',
    'httpx>=0.25.0, <1',  # https://news.ycombinator.com/item?id=47514603
    'lxml',
    'psycopg',
    'pyclean',
    'python-dateutil',
    'wagtail==7.2.2',
    'wagtailmedia',
    'walrus',
    'densho-wagtail-notes @ git+https://github.com/denshoproject/densho-wagtail-notes',
    'elastictools @ git+https://github.com/denshoproject/densho-elastictools',
    #'encyc-core @ git+https://github.com/denshoproject/encyc-core',
    'encyc-core @ git+file:///opt/encyc-core@wagtail',
]

#[project.optional-dependencies]
#testing = []

[project.urls]
Repository = "https://github.com/denshoproject/encyc-tng"

[tool.setuptools]
packages = ['encyctng']

# Dependency Cooldown - allow time for malware to be detected and remediated
# https://blog.pypi.org/posts/2026-04-02-incident-report-litellm-telnyx-supply-chain-attack/
[tool.uv]
exclude-newer = "P5D"  # "5 days" in RFC 3339 format
